remove animation to stop flickering effect when hovering over the list window

--- a/bootstrap-magic-editor.less
+++ b/bootstrap-magic-editor.less
@@ -32,6 +32,7 @@
   }
   .pinned {
     color: red;
+    -webkit-backface-visibility: hidden;
   }
 }
 
